# CI2024_project-work

./: .gitignore  README.md  pyproject.toml  s334726.py
src/: problem_0.npz  pyproject.toml  test.ipynb
src/gp/: __init__.py  draw.py  gp_symreg.py  individual.py  node.py
